imclient/marslib/include/WFClient.h



//general function callback
typedef void (WFCAPI *fun_general_void_success_callback)(void *pObject, int objectDataType);

typedef void (WFCAPI *fun_general_string_success_callback)(void *pObject, int objectDataType, const char *cval, size_t val_len);

typedef void (WFCAPI *fun_general_error_callback)(void *pObject, int objectDataType, int errorCode);


extern "C" PROTOWRAPPER_API void WFCAPI recallMessage(int64_t messageUid, fun_general_void_success_callback succCallback, fun_general_error_callback errCallback, void *pObject, int objectDataType);


typedef void (WFCAPI *fun_uploadMedia_progress_callback)(void *pObject, int objectDataType, int uploaded, int total);


extern "C" PROTOWRAPPER_API void WFCAPI uploadMedia(const char *cstrName, size_t strName_len, const char *cdata, int dataLen, int mediaType, fun_general_string_success_callback successCB, fun_general_error_callback errorCB, fun_uploadMedia_progress_callback progressCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI getUploadUrl(const char *cstrName, size_t strName_len, int mediaType, const char *ccontentType, int contentType_Len, fun_general_string_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isSupportBigFilesUpload();

extern "C" PROTOWRAPPER_API bool WFCAPI isForceBigFilesUpload();


extern "C" PROTOWRAPPER_API bool WFCAPI deleteMessage(long messageId);


extern "C" PROTOWRAPPER_API bool WFCAPI batchDeleteMessages(const int64_t messageUids[], int64_t messageUids_len);


extern "C" PROTOWRAPPER_API void WFCAPI clearMessages(int conversationType, const char *ctarget, size_t target_len, int line);


extern "C" PROTOWRAPPER_API void WFCAPI clearMessagesBefore(int conversationType, const char *ctarget, size_t target_len, int line, int64_t before);


extern "C" PROTOWRAPPER_API void WFCAPI clearMessagesKeep(int conversationType, const char *ctarget, size_t target_len, int line, int keepCount);


extern "C" PROTOWRAPPER_API void WFCAPI clearUserMessagesBetween(const char *cuser, size_t user_len, int64_t start, int64_t end);


extern "C" PROTOWRAPPER_API void WFCAPI clearAllMessages(bool removeAllConversation);


extern "C" PROTOWRAPPER_API void WFCAPI deleteRemoteMessage(int64_t messageUid, fun_general_void_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI updateRemoteMessage(int64_t messageUid, const char *cstrcont, size_t strcont_len, bool distribute, bool updateLocal, fun_general_void_success_callback successCallback, fun_general_error_callback errorCallback, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API const char* WFCAPI insertMessage(int conversationType, const char *ctarget, size_t target_len, int line, const char *cstrfrom, size_t strfrom_len, const char *cstrcont, size_t strcont_len, int status, bool notify, int64_t serverTime, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI updateMessage(long messageId, const char *cstrcont, size_t strcont_len);

extern "C" PROTOWRAPPER_API void WFCAPI updateMessageContentAndTime(long messageId, const char *cstrcont, size_t strcont_len, int64_t timestamp);

extern "C" PROTOWRAPPER_API void WFCAPI updateMessageStatus(long messageId, int messageStatus);


extern "C" PROTOWRAPPER_API const char* WFCAPI getConversationRead(int conversationType, const char *ctarget, size_t target_len, int line, size_t *retlen);

extern "C" PROTOWRAPPER_API const char* WFCAPI getMessageDelivery(int conversationType, const char *ctarget, size_t target_len, size_t *retlen);


extern "C" PROTOWRAPPER_API int WFCAPI getMessageCount(int conversationType, const char *ctarget, size_t target_len, int line);

extern "C" PROTOWRAPPER_API int WFCAPI getConversationMessageCount(const int atypes[], int types_len, const int als[], int ls_len);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMessageCountByDay(int conversationType, const char *ctarget, size_t target_len, int line, const int acontentTypes[], int contentTypes_len, int64_t startTime, int64_t endTime, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getUserInfo(const char *cuserId, size_t userId_len, bool refresh, const char *cgroupId, size_t groupId_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getUserInfos(const char** cusers, const size_t* userLengths, size_t userCount, const char *cgroupId, size_t groupId_len, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI searchUser(const char *ckeyword, size_t keyword_len, int searchType, int page, fun_general_string_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API void WFCAPI searchUserEx(const char *ckeyword, size_t keyword_len, const char *cdomainId, size_t domainId_len, int searchType, int userType, int page, fun_general_string_success_callback successCB, fun_general_error_callback errorCB, void *pObject, int objectDataType);


extern "C" PROTOWRAPPER_API bool WFCAPI isMyFriend(const char *cuserId, size_t userId_len);


extern "C" PROTOWRAPPER_API const char* WFCAPI getMyFriendList(bool refresh, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI searchFriends(const char *ckeyword, size_t keyword_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI searchGroups(const char *ckeyword, size_t keyword_len, size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getIncommingFriendRequest(size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getOutgoingFriendRequest(size_t *retlen);


extern "C" PROTOWRAPPER_API const char* WFCAPI getFriendRequest(const char *cuserId, size_t userId_len, bool incomming, size_t *retlen);


extern "C" PROTOWRAPPER_API void WFCAPI loadFriendRequestFromRemote();


extern "C" PROTOWRAPPER_API int WFCAPI getUnreadFriendRequestStatus();