imclient/lib/src/ffi/wfclient_bindings.dart


  late final void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) recallMessage =
      _lib.lookupFunction<Void Function(Int64, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('recallMessage');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32, Int32)>>, Pointer<Void>, int) uploadMedia =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32, Int32)>>, Pointer<Void>, int)>('uploadMedia');

  late final void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) getUploadUrl =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Pointer<Char>, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, Pointer<Char>, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('getUploadUrl');

  late final bool Function() isSupportBigFilesUpload =
      _lib.lookupFunction<Bool Function(), bool Function()>('isSupportBigFilesUpload');

  late final bool Function() isForceBigFilesUpload =
      _lib.lookupFunction<Bool Function(), bool Function()>('isForceBigFilesUpload');

  late final bool Function(int) deleteMessage =
      _lib.lookupFunction<Bool Function(Long), bool Function(int)>('deleteMessage');

  late final bool Function(Pointer<Int64>, int) batchDeleteMessages =
      _lib.lookupFunction<Bool Function(Pointer<Int64>, Int64), bool Function(Pointer<Int64>, int)>('batchDeleteMessages');

  late final void Function(int, Pointer<Char>, int, int) clearMessages =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32), void Function(int, Pointer<Char>, int, int)>('clearMessages');

  late final void Function(int, Pointer<Char>, int, int, int) clearMessagesBefore =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Int64), void Function(int, Pointer<Char>, int, int, int)>('clearMessagesBefore');

  late final void Function(int, Pointer<Char>, int, int, int) clearMessagesKeep =
      _lib.lookupFunction<Void Function(Int32, Pointer<Char>, Size, Int32, Int32), void Function(int, Pointer<Char>, int, int, int)>('clearMessagesKeep');

  late final void Function(Pointer<Char>, int, int, int) clearUserMessagesBetween =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int64, Int64), void Function(Pointer<Char>, int, int, int)>('clearUserMessagesBetween');

  late final void Function(bool) clearAllMessages =
      _lib.lookupFunction<Void Function(Bool), void Function(bool)>('clearAllMessages');

  late final void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) deleteRemoteMessage =
      _lib.lookupFunction<Void Function(Int64, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('deleteRemoteMessage');

  late final void Function(int, Pointer<Char>, int, bool, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) updateRemoteMessage =
      _lib.lookupFunction<Void Function(Int64, Pointer<Char>, Size, Bool, Bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(int, Pointer<Char>, int, bool, bool, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('updateRemoteMessage');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Char>, int, int, bool, int, Pointer<Size>) insertMessage =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Char>, Size, Pointer<Char>, Size, Int32, Bool, Int64, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Char>, int, Pointer<Char>, int, int, bool, int, Pointer<Size>)>('insertMessage');

  late final void Function(int, Pointer<Char>, int) updateMessage =
      _lib.lookupFunction<Void Function(Long, Pointer<Char>, Size), void Function(int, Pointer<Char>, int)>('updateMessage');

  late final void Function(int, Pointer<Char>, int, int) updateMessageContentAndTime =
      _lib.lookupFunction<Void Function(Long, Pointer<Char>, Size, Int64), void Function(int, Pointer<Char>, int, int)>('updateMessageContentAndTime');

  late final void Function(int, int) updateMessageStatus =
      _lib.lookupFunction<Void Function(Long, Int32), void Function(int, int)>('updateMessageStatus');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Size>) getConversationRead =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Size>)>('getConversationRead');

  late final Pointer<Char> Function(int, Pointer<Char>, int, Pointer<Size>) getMessageDelivery =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, Pointer<Size>)>('getMessageDelivery');

  late final int Function(int, Pointer<Char>, int, int) getMessageCount =
      _lib.lookupFunction<Int32 Function(Int32, Pointer<Char>, Size, Int32), int Function(int, Pointer<Char>, int, int)>('getMessageCount');

  late final int Function(Pointer<Int32>, int, Pointer<Int32>, int) getConversationMessageCount =
      _lib.lookupFunction<Int32 Function(Pointer<Int32>, Int32, Pointer<Int32>, Int32), int Function(Pointer<Int32>, int, Pointer<Int32>, int)>('getConversationMessageCount');

  late final Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, int, Pointer<Size>) getMessageCountByDay =
      _lib.lookupFunction<Pointer<Char> Function(Int32, Pointer<Char>, Size, Int32, Pointer<Int32>, Int32, Int64, Int64, Pointer<Size>), Pointer<Char> Function(int, Pointer<Char>, int, int, Pointer<Int32>, int, int, int, Pointer<Size>)>('getMessageCountByDay');

  late final Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Char>, int, Pointer<Size>) getUserInfo =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Bool, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Char>, int, Pointer<Size>)>('getUserInfo');

  late final Pointer<Char> Function(Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Char>, int, Pointer<Size>) getUserInfos =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Pointer<Char>>, Pointer<Size>, Size, Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Pointer<Char>>, Pointer<Size>, int, Pointer<Char>, int, Pointer<Size>)>('getUserInfos');

  late final void Function(Pointer<Char>, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) searchUser =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('searchUser');

  late final void Function(Pointer<Char>, int, Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int) searchUserEx =
      _lib.lookupFunction<Void Function(Pointer<Char>, Size, Pointer<Char>, Size, Int32, Int32, Int32, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, Int32), void Function(Pointer<Char>, int, Pointer<Char>, int, int, int, int, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Pointer<Char>, Size)>>, Pointer<NativeFunction<Void Function(Pointer<Void>, Int32, Int32)>>, Pointer<Void>, int)>('searchUserEx');

  late final bool Function(Pointer<Char>, int) isMyFriend =
      _lib.lookupFunction<Bool Function(Pointer<Char>, Size), bool Function(Pointer<Char>, int)>('isMyFriend');

  late final Pointer<Char> Function(bool, Pointer<Size>) getMyFriendList =
      _lib.lookupFunction<Pointer<Char> Function(Bool, Pointer<Size>), Pointer<Char> Function(bool, Pointer<Size>)>('getMyFriendList');

  late final Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>) searchFriends =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>)>('searchFriends');

  late final Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>) searchGroups =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, Pointer<Size>)>('searchGroups');

  late final Pointer<Char> Function(Pointer<Size>) getIncommingFriendRequest =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getIncommingFriendRequest');

  late final Pointer<Char> Function(Pointer<Size>) getOutgoingFriendRequest =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Size>), Pointer<Char> Function(Pointer<Size>)>('getOutgoingFriendRequest');

  late final Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>) getFriendRequest =
      _lib.lookupFunction<Pointer<Char> Function(Pointer<Char>, Size, Bool, Pointer<Size>), Pointer<Char> Function(Pointer<Char>, int, bool, Pointer<Size>)>('getFriendRequest');

  late final void Function() loadFriendRequestFromRemote =
      _lib.lookupFunction<Void Function(), void Function()>('loadFriendRequestFromRemote');

  late final int Function() getUnreadFriendRequestStatus =
      _lib.lookupFunction<Int32 Function(), int Function()>('getUnreadFriendRequestStatus');
